--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </form>
     <button class="bookcab" type="submit" onclick="bookCab()"  form="travelForm">Get Your Ride</button>
     <div class="hero-image">
-      <img src="/image/city.png" alt="city">
+      <img src="image/city.png" alt="city">
     </div>
   </section>
 
@@ -140,7 +140,7 @@
 
   <div class="main-service-card">
     <div class="service-card">
-      <img src="/image/car-1.png" alt="Car 1">
+      <img src="image/car-1.png" alt="Car 1">
       <h3>SUVs</h3>
       <button class="enquire-btn"><i class="fab fa-whatsapp"></i> Enquire Now</button>
     </div>
