--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
-  <!-- External JavaScript file -->
-  <script defer src="script.js"></script>
+  
 
   <!-- Title of the webpage -->
   <title>Vishal Cab Service</title>
@@ -27,7 +26,7 @@
   <!-- Navigation Bar -->
   <nav class="navbar">
     <div class="navbar-brand">
-      <h1>Vishal Cab Service</h1>
+     <h1>Vishal Cab Service</h1>
     </div>
     <div class="navbar-toggle" id="navbarToggle">
       <span class="bar"></span>
@@ -42,25 +41,25 @@
     </div>
   </nav>
 
- 
+
   <section class="hero-section">
     <form class="travel-form" id="travelForm">
       <div class="travel-form-content">
         <label for="firstName">Name</label>
         <input type="text" id="firstName" placeholder="Your Name" required>
       </div>
-  
+
       <div class="travel-form-content">
         <label for="from">Travelling from</label>
         <input type="text" id="from" placeholder="Arrival" required>
       </div>
-  
+
       <div class="travel-form-content">
         <label for="to">Travelling to</label>
         <input type="text" id="to" placeholder="Destination" required>
       </div>
     </form>
-    <button class="bookcab" type="submit" onclick="bookCab()"  form="travelForm">Get Your Ride</button>
+    <button class="bookcab" type="submit" onclick="bookCab()" form="travelForm">Get Your Ride</button>
     <div class="hero-image">
       <img src="image/city.png" alt="city">
     </div>
@@ -71,18 +70,20 @@
     <div class="about-section">
       <div class="about-content-left">
         <h2>About us</h2>
-        <p>Welcome to <span class="brand-name"> Vishal Cab Service</span>, your premier destination for luxury car rentals in Ludhiana. At Car Valley, we go
+        <p>Welcome to <span class="brand-name"> Vishal Cab Service</span>, your premier destination for luxury car
+          rentals in Ludhiana. At Vishal Cab Services, we go
           beyond just providing cars; we create unforgettable experiences tailored to your needs.
           Our journey began with a simple vision - to redefine the way people experience car rentals. We recognized the
-          need for a service that combines luxury, reliability, and exceptional customer care, and thus, Vishal Cab Service was
+          need for a service that combines luxury, reliability, and exceptional customer care, and thus, Vishal Cab
+          Service was
           born.</p>
-      <!-- Social Icons -->
-      <div class="social-icons">
-        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://x.com" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://wa./+918840864525" target="_blank"><i class="fab fa-whatsapp"></i></a>
-        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-      </div>
+        <!-- Social Icons -->
+        <div class="social-icons">
+          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://x.com" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://wa./+918840864525" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
 
       </div>
       <div class="about-content-right">
@@ -97,8 +98,8 @@
           </div>
 
 
-          <div class="card-1 2">
-            <div class="card-1-content 2">
+          <div class="card-1 ">
+            <div class="card-1-content ">
               <i class="fas fa-ticket-alt"></i>
               <h3>Book Online</h3>
             </div>
@@ -162,202 +163,207 @@
   </div>
 
 
-<!-- Popular Cab Routes -->
-<section class="popular-cab">
-  <h2>Popular Cab Routes</h2>
-</section>
+  <!-- Popular Cab Routes -->
+  <section class="popular-cab">
+    <h2>Popular Cab Routes</h2>
+  </section>
 
-<div class="cab-routes-section">
+  <div class="cab-routes-section">
 
-  <div class="cab-routes">
-    <div class="cab-routes-card">
-      <div class="cab-routes-card-image">
-      <img src="image/new-delhi.png">
-    </div>
-      <div class="cab-route-text">
-        <p>Cab From</p>
-        <h3>Ludhiana to Delhi</h3>
+    <div class="cab-routes">
+      <div class="cab-routes-card">
+        <div class="cab-routes-card-image">
+          <img src="image/new-delhi.png">
+        </div>
+        <div class="cab-route-text">
+          <p>Cab From</p>
+          <h3>Ludhiana to Delhi</h3>
+        </div>
+      </div>
+
+      <div class="cab-routes-card">
+        <div class="cab-routes-card-image">
+
+          <img src="image/golden-temple.png">
+        </div>
+        <div class="cab-route-text">
+          <p>Cab From</p>
+          <h3>Ludhiana to Amritsar</h3>
+        </div>
+      </div>
+
+      <div class="cab-routes-card">
+        <div class="cab-routes-card-image">
+
+          <img src="image/Gateway-of-India.png">
+        </div>
+        <div class="cab-route-text">
+          <p>Cab From</p>
+          <h3>Ludhiana to Mumbai</h3>
+        </div>
       </div>
     </div>
 
-    <div class="cab-routes-card">
-      <div class="cab-routes-card-image">
+    <div class="cab-routes">
+      <div class="cab-routes-card">
+        <div class="cab-routes-card-image">
 
-      <img src="image/golden-temple.png">
+          <img src="image/kolkata.png">
+        </div>
+        <div class="cab-route-text">
+          <p>Cab From</p>
+          <h3>Ludhiana to Kolkata</h3>
+        </div>
       </div>
-      <div class="cab-route-text">
-        <p>Cab From</p>
-        <h3>Ludhiana to Amritsar</h3>
+
+      <div class="cab-routes-card">
+        <div class="cab-routes-card-image">
+
+          <img src="image/agra.png">
+        </div>
+        <div class="cab-route-text">
+          <p>Cab From</p>
+          <h3>Ludhiana to Agra</h3>
+        </div>
+      </div>
+
+      <div class="cab-routes-card">
+        <div class="cab-routes-card-image">
+
+          <img src="image/Hawa-Mahal-Jaipur.png">
+        </div>
+        <div class="cab-route-text">
+          <p>Cab From</p>
+          <h3>Ludhiana to Jaipur</h3>
+        </div>
       </div>
     </div>
 
-    <div class="cab-routes-card">
-      <div class="cab-routes-card-image">
+    <div class="cab-routes">
 
-      <img src="image/Gateway-of-India.png">
+      <div class="cab-routes-card">
+        <div class="cab-routes-card-image">
+
+          <img src="image/pune.png">
+        </div>
+        <div class="cab-route-text">
+          <p>Cab From</p>
+          <h3>Ludhiana to Pune</h3>
+        </div>
       </div>
-      <div class="cab-route-text">
-        <p>Cab From</p>
-        <h3>Ludhiana to Mumbai</h3>
+
+      <div class="cab-routes-card">
+        <div class="cab-routes-card-image">
+
+          <img src="image/surat.png">
+        </div>
+        <div class="cab-route-text">
+          <p>Cab From</p>
+          <h3>Ludhiana to Surat</h3>
+        </div>
+      </div>
+
+      <div class="cab-routes-card">
+        <div class="cab-routes-card-image">
+
+          <img src="image/chennai.png">
+        </div>
+        <div class="cab-route-text">
+          <p>Cab From</p>
+          <h3>Ludhiana to Chennai</h3>
+        </div>
       </div>
     </div>
+
   </div>
+  <!-- End Popular Cab Routes -->
 
-  <div class="cab-routes">
-    <div class="cab-routes-card">
-      <div class="cab-routes-card-image">
 
-      <img src="image/kolkata.png">
+  <section class="book-with-us">
+    <div class="book-with-us-heading">
+      <h2>Why book with us</h2>
+    </div>
+    <div class="book-with-us-card">
+      <div class="book-card">
+        <div class="book-card-icon">
+          <i class="fas fa-calendar-alt"></i> <!-- Replaced with a calendar icon -->
+        </div>
+        <div class="book-card-heading">
+          <h2>Easy Booking</h2>
+        </div>
+        <div class="book-card-paragraph">
+          <p>We offer easy and convenient cab booking.</p>
+        </div>
       </div>
-      <div class="cab-route-text">
-        <p>Cab From</p>
-        <h3>Ludhiana to Kolkata</h3>
+
+      <div class="book-card">
+        <div class="book-card-icon">
+          <i class="fas fa-percent"></i> <!-- Replaced with a percentage icon -->
+        </div>
+        <div class="book-card-heading">
+          <h2>Exciting Deals</h2>
+        </div>
+        <div class="book-card-paragraph">
+          <p>Enjoy exciting deals on car rental and tour packages.</p>
+        </div>
+      </div>
+
+      <div class="book-card">
+        <div class="book-card-icon">
+          <i class="fas fa-headset"></i> <!-- Replaced with a headset icon -->
+        </div>
+        <div class="book-card-heading">
+          <h2>24/7 Support</h2>
+        </div>
+        <div class="book-card-paragraph">
+          <p>Get assistance 24/7 on any kind of travel-related query. We are happy to assist you.</p>
+        </div>
       </div>
     </div>
+  </section>
 
-    <div class="cab-routes-card">
-      <div class="cab-routes-card-image">
 
-      <img src="image/agra.png"></div>
-      <div class="cab-route-text">
-        <p>Cab From</p>
-        <h3>Ludhiana to Agra</h3>
+
+
+
+  <!-- Footer Section -->
+  <footer class="footer-section" id="contact">
+    <div class="footer-content">
+      <!-- Contact Information -->
+      <div class="quick-info">
+        <h3>Contact Us</h3>
+        <p>Email: info@vishalcabservice.com</p>
+        <p>Phone: +91 123 456 7890</p>
+        <p>Address: 123 Street, Ludhiana, India</p>
+      </div>
+
+      <!-- Quick Links -->
+      <div class="quick-info">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+
+      <!-- Social Media Links -->
+      <div class="quick-info">
+        <h3>Follow Us</h3>
+        <div class="social-icons-footer">
+          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+        </div>
       </div>
     </div>
-
-    <div class="cab-routes-card">
-      <div class="cab-routes-card-image">
-
-      <img src="image/Hawa-Mahal-Jaipur.png"></div>
-      <div class="cab-route-text">
-        <p>Cab From</p>
-        <h3>Ludhiana to Jaipur</h3>
-      </div>
+    <!-- Copyright Information -->
+    <div class="copyright">
+      <p>&copy; 2023 Vishal Cab Service. All rights reserved.</p>
     </div>
-  </div>
-
-  <div class="cab-routes">
-    
-    <div class="cab-routes-card">
-      <div class="cab-routes-card-image">
-
-      <img src="image/pune.png"></div>
-      <div class="cab-route-text">
-        <p>Cab From</p>
-        <h3>Ludhiana to Pune</h3>
-      </div>
-    </div>
-
-    <div class="cab-routes-card">
-      <div class="cab-routes-card-image">
-
-      <img src="image/surat.png"></div>
-      <div class="cab-route-text">
-        <p>Cab From</p>
-        <h3>Ludhiana to Surat</h3>
-      </div>
-    </div>
-
-    <div class="cab-routes-card">
-      <div class="cab-routes-card-image">
-
-      <img src="image/chennai.png"></div>
-      <div class="cab-route-text">
-        <p>Cab From</p>
-        <h3>Ludhiana to Chennai</h3>
-      </div>
-    </div>
-  </div>
-
-</div>
-<!-- End Popular Cab Routes -->
-
-
-<section class="book-with-us">
-  <div class="book-with-us-heading">
-    <h2>Why book with us</h2>
-  </div>
-  <div class="book-with-us-card">
-    <div class="book-card">
-      <div class="book-card-icon">
-        <i class="fas fa-calendar-alt"></i> <!-- Replaced with a calendar icon -->
-      </div>
-      <div class="book-card-heading">
-        <h2>Easy Booking</h2>
-      </div>
-      <div class="book-card-paragraph">
-        <p>We offer easy and convenient cab booking.</p>
-      </div>
-    </div>
-
-    <div class="book-card">
-      <div class="book-card-icon">
-        <i class="fas fa-percent"></i> <!-- Replaced with a percentage icon -->
-      </div>
-      <div class="book-card-heading">
-        <h2>Exciting Deals</h2>
-      </div>
-      <div class="book-card-paragraph">
-        <p>Enjoy exciting deals on car rental and tour packages.</p>
-      </div>
-    </div>
-
-    <div class="book-card">
-      <div class="book-card-icon">
-        <i class="fas fa-headset"></i> <!-- Replaced with a headset icon -->
-      </div>
-      <div class="book-card-heading">
-        <h2>24/7 Support</h2>
-      </div>
-      <div class="book-card-paragraph">
-        <p>Get assistance 24/7 on any kind of travel-related query. We are happy to assist you.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-
-
-<!-- Footer Section -->
-<footer class="footer-section" id="contact">
-  <div class="footer-content">
-    <!-- Contact Information -->
-    <div class="quick-info">
-      <h3>Contact Us</h3>
-      <p>Email: info@vishalcabservice.com</p>
-      <p>Phone: +91 123 456 7890</p>
-      <p>Address: 123 Street, Ludhiana, India</p>
-    </div>
-
-    <!-- Quick Links -->
-    <div class="quick-info">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </div>
-
-    <!-- Social Media Links -->
-    <div class="quick-info">
-      <h3>Follow Us</h3>
-      <div class="social-icons-footer">
-        <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-        <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
-      </div>
-    </div>
-  </div>
-  <!-- Copyright Information -->
-  <div class="copyright">
-    <p>&copy; 2023 Vishal Cab Service. All rights reserved.</p>
-  </div>
-</footer>
+  </footer>
 
 
 
@@ -367,7 +373,8 @@
 
 
 
-
+<!-- External JavaScript file -->
+<script defer src="script.js"></script>
 
 </body>
 
