--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
           born.</p>
         <!-- Social Icons -->
         <div class="social-icons">
-          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="https://x.com" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a href="https://wa./+918840864525" target="_blank"><i class="fab fa-whatsapp"></i></a>
-          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.facebook.com/vishal.cab.service" target="_blank"><i class="fab fa-facebook"></i></a>
+          <a href="https://wa.me/+919216288000" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://www.instagram.com/vishal.cabservice" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
 
       </div>
@@ -140,25 +139,38 @@
   </div>
 
   <div class="main-service-card">
+    <div class="service-card-box">
     <div class="service-card">
-      <img src="image/car-1.png" alt="Car 1">
+      <img src="image/car-2.png" alt="Car 1">
       <h3>SUVs</h3>
-      <button class="enquire-btn"><i class="fab fa-whatsapp"></i> Enquire Now</button>
+      <a href="https://wa.me/+919216288000?text=hello%2C%20vishal%20cab%20service%20I%20needed%20SUV%20cab%20service" target="_blank" class="enquire-btn"><i class="fab fa-whatsapp"></i> Enquire Now</a>
     </div>
+  </div>
+
+  <div class="service-card-box">
+
     <div class="service-card">
-      <img src="image/car-2.png" alt="Car 2">
+      <img src="image/swift-dzire-car.png" alt="Car 2">
       <h3>Sedan</h3>
-      <button class="enquire-btn"><i class="fab fa-whatsapp"></i> Enquire Now</button>
+      <a href="https://wa.me/+919216288000?text=hello%2C%20vishal%20cab%20service%20I%20needed%20Sedan%20cab%20service" target="_blank" class="enquire-btn"><i class="fab fa-whatsapp"></i> Enquire Now</a>
     </div>
+    </div>
+
+    <div class="service-card-box">
     <div class="service-card">
       <img src="image/car-3.png" alt="Car 3">
       <h3>Compact</h3>
-      <button class="enquire-btn"><i class="fab fa-whatsapp"></i> Enquire Now</button>
+      <a href="https://wa.me/+919216288000?text=hello%2C%20vishal%20cab%20service%20I%20needed%20Compact%20cab%20service" target="_blank" class="enquire-btn"><i class="fab fa-whatsapp"></i> Enquire Now</a>
     </div>
+    </div>
+
+    <div class="service-card-box">
+
     <div class="service-card">
       <img src="image/car-4.png" alt="Car 4">
       <h3>Luxury Car</h3>
-      <button class="enquire-btn"><i class="fab fa-whatsapp"></i> Enquire Now</button>
+      <a href="https://wa.me/+919216288000?text=hello%2C%20vishal%20cab%20service%20I%20needed%20Luxury%20cab%20service" target="_blank" class="enquire-btn"><i class="fab fa-whatsapp"></i> Enquire Now</a>
+    </div>
     </div>
   </div>
 
@@ -310,7 +322,7 @@
 
       <div class="book-card">
         <div class="book-card-icon">
-          <i class="fas fa-headset"></i> <!-- Replaced with a headset icon -->
+          <i class="fas fa-headset"></i> 
         </div>
         <div class="book-card-heading">
           <h2>24/7 Support</h2>
@@ -322,55 +334,69 @@
     </div>
   </section>
 
+  <section class="footer-section">
 
-
-
-
-  <!-- Footer Section -->
-  <footer class="footer-section" id="contact">
-    <div class="footer-content">
-      <!-- Contact Information -->
-      <div class="quick-info">
-        <h3>Contact Us</h3>
-        <p>Email: info@vishalcabservice.com</p>
-        <p>Phone: +91 123 456 7890</p>
-        <p>Address: 123 Street, Ludhiana, India</p>
-      </div>
-
-      <!-- Quick Links -->
-      <div class="quick-info">
-        <h3>Quick Links</h3>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </div>
-
-      <!-- Social Media Links -->
-      <div class="quick-info">
-        <h3>Follow Us</h3>
-        <div class="social-icons-footer">
-          <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
-          <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <div class="footer-item">
+      <div class="footer-box">
+        <div class="footer-heading-box">
+          <h2>About Company</h2>
+        </div>
+        <div class="footer-content-box footer-about">
+          <p>
+            We don't just offer rides; we create memorable experiences. Book with us for luxury and comfort on your journey.          </p>
         </div>
       </div>
     </div>
-    <!-- Copyright Information -->
-    <div class="copyright">
-      <p>&copy; 2023 Vishal Cab Service. All rights reserved.</p>
+
+
+
+
+    <div class="footer-item">
+      <div class="footer-box">
+        <div class="footer-heading-box">
+          <h2>Contact Us</h2>
+        </div>
+        <div class="footer-content-box footer-contact">
+          <p>Email: <a href="mailto:vishalraj88000@gmail.com">Vishalraj88000@gmail.com</a></p>
+          <p>Phone: <a href="tel:+919216288000">+91 9216288000</a></p>
+          <p>Address: New Railway colony, Manakwal, Ludhiana, Punjab - 141116</p>
+        </div>
+      </div>
     </div>
-  </footer>
-
-
-
-
-
-
-
+  
+    <div class="footer-item">
+      <div class="footer-box">
+        <div class="footer-heading-box">
+          <h2>Quick Links</h2>
+        </div>
+        <div class="footer-content-box footer-links">
+          <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Services</li>
+            <li>Contact</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  
+    <div class="footer-item">
+      <div class="footer-box">
+        <div class="footer-heading-box">
+          <h2>Follow Us</h2>
+        </div>
+        <div class="footer-content-box footer-social">
+          <a href="https://www.facebook.com/vishal.cab.service" target="_blank"><i class="fab fa-facebook"></i></a>  
+          <a href="https://wa.me/+919216288000" target="_blank"><i class="fab fa-whatsapp"></i></a>
+          <a href="https://www.instagram.com/vishal.cabservice" target="_blank"><i class="fab fa-instagram"></i></a>   
+        </div>
+      </div>
+    </div>
+  
+  </section>
+  <div class="copyright">
+    <p>© 2023 Vishal Cab Service. All rights reserved.</p>
+  </div>
 
 
 <!-- External JavaScript file -->
